--- a/Lone Mars.csproj
+++ b/Lone Mars.csproj
@@ -42,6 +42,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <PlatformTarget>x86</PlatformTarget>
     <XnaCompressContent>false</XnaCompressContent>
+    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>pdbonly</DebugType>
@@ -85,7 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Boid.cs" />
+    <Compile Include="BoidVisualizer.cs" />
     <Compile Include="FInt.cs" />
+    <Compile Include="Flock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="LoneMarsGame.cs" />
