Added bug + swarm

--- a/Lone Mars.csproj
+++ b/Lone Mars.csproj
@@ -86,13 +86,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Boid.cs" />
-    <Compile Include="BoidVisualizer.cs" />
+    <Compile Include="Bug.cs" />
+    <Compile Include="FlockVisualizer.cs" />
     <Compile Include="FInt.cs" />
     <Compile Include="Flock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="LoneMarsGame.cs" />
     <Compile Include="PVector2.cs" />
+    <Compile Include="Swarm.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
